Add story section about a supernatural phone call
Added a story about a mysterious phone call from a deceased mother.

--- a/index.html
+++ b/index.html
@@ -101,3 +101,38 @@
     © 2026 – Proyecto independiente | Donaciones voluntarias
   </footer></body>
   </html>
+<div class="card">
+  <h2>La llamada que no venía de este mundo</h2>
+  <p>
+    Este hecho ocurrió en una zona rural donde la señal telefónica es inestable.
+    Un hombre vivía solo desde que su madre había fallecido meses atrás.
+    Aquella noche, exactamente a las 2:43 a.m., su celular comenzó a sonar.
+  </p>
+  <p>
+    Al mirar la pantalla, el número era desconocido. Contestó.
+    Del otro lado no había ruido, solo una respiración lenta y profunda.
+    Justo cuando iba a colgar, escuchó una voz que conocía demasiado bien:
+    era la voz de su madre pronunciando su nombre.
+  </p>
+  <p>
+    Paralizado, dejó caer el teléfono. Minutos después, revisó el registro
+    de llamadas. No había ninguna llamada entrante.
+    El celular marcaba que había estado en silencio toda la noche.
+  </p>
+  <p>
+    Días después, revisando antiguas pertenencias, encontró el teléfono
+    viejo de su madre. Estaba apagado… pero tenía una llamada saliente
+    registrada exactamente a las 2:43 a.m., dirigida a su número.
+  </p>
+  <p>
+    Desde ese día, cada vez que el reloj marca esa hora,
+    el celular pierde señal durante un minuto exacto.
+    Nadie ha podido explicar cómo ocurrió.
+  </p>
+  <p><em>
+    Este tipo de casos ha sido reportado en distintos países,
+    especialmente en situaciones de duelo reciente.
+    La pregunta sigue siendo la misma:
+    ¿fue una coincidencia… o alguien intentó despedirse?
+  </em></p>
+</div>
