Refactor index.html to add new paranormal story

--- a/index.html
+++ b/index.html
@@ -74,34 +74,8 @@
         Archivo Paranormal nace para recopilar y compartir relatos reales, experiencias inexplicables,
         fenómenos paranormales y análisis que despiertan preguntas sobre lo que no podemos ver,
         pero muchos han vivido.
-      </p>
-    </div><div class="card">
-  <h2>Apoya el Archivo Paranormal</h2>
-  <p>
-    Si este contenido te genera interés, inquietud o valor, puedes apoyar el proyecto con una
-    donación voluntaria. Tu apoyo ayuda a mejorar la investigación, producción de contenido
-    y difusión de estas historias.
-  </p>
-  <div class="buttons">
-    <a href="https://www.paypal.me/DBallesteros91" target="_blank">Donar con PayPal</a>
-    <a href="#" target="_blank">Apoyar vía Ko‑fi</a>
-  </div>
-</div>
-</div>
-
-<div class="card">
-  <h2>International Paranormal Community</h2>
-  <p>
-    Paranormal stories know no borders. People from any country are welcome to support
-    this independent paranormal archive through voluntary contributions.
-  </p>
-</div>
-
-  </section>  <footer>
-    © 2026 – Proyecto independiente | Donaciones voluntarias
-  </footer></body>
-  </html>
-<div class="card">
+      </p> 
+      <div class="card">
   <h2>La llamada que no venía de este mundo</h2>
   <p>
     Este hecho ocurrió en una zona rural donde la señal telefónica es inestable.
@@ -134,5 +108,66 @@
     especialmente en situaciones de duelo reciente.
     La pregunta sigue siendo la misma:
     ¿fue una coincidencia… o alguien intentó despedirse?
+  </em></p> 
+        <div class="card">
+  <h2>The Call That Didn’t Come From This World</h2>
+  <p>
+    This event took place in a rural area where phone signal is unstable.
+    A man was living alone after his mother had passed away months earlier.
+    That night, at exactly 2:43 a.m., his cellphone started ringing.
+  </p>
+  <p>
+    When he looked at the screen, the number was unknown. He answered.
+    There was no background noise, only slow, deep breathing.
+    Just as he was about to hang up, he heard a voice he knew all too well:
+    it was his mother’s voice saying his name.
+  </p>
+  <p>
+    Frozen in fear, he dropped the phone. Minutes later, he checked the call log.
+    There was no incoming call recorded.
+    The phone showed complete silence throughout the night.
+  </p>
+  <p>
+    Days later, while going through old belongings, he found his mother’s old phone.
+    It was turned off… but it had one outgoing call logged
+    at exactly 2:43 a.m., dialed to his number.
+  </p>
+  <p>
+    Since that day, every time the clock reaches that hour,
+    his cellphone loses signal for exactly one minute.
+    No one has been able to explain how it happened.
+  </p>
+  <p><em>
+    Similar cases have been reported in different countries,
+    especially during periods of recent grief.
+    The question remains the same:
+    was it a coincidence… or was someone trying to say goodbye?
   </em></p>
+        </div>
+      </div>
+    </div><div class="card">
+  <h2>Apoya el Archivo Paranormal</h2>
+  <p>
+    Si este contenido te genera interés, inquietud o valor, puedes apoyar el proyecto con una
+    donación voluntaria. Tu apoyo ayuda a mejorar la investigación, producción de contenido
+    y difusión de estas historias.
+  </p>
+  <div class="buttons">
+    <a href="https://www.paypal.me/DBallesteros91" target="_blank">Donar con PayPal</a>
+    <a href="#" target="_blank">Apoyar vía Ko‑fi</a>
+  </div>
 </div>
+</div>
+
+<div class="card">
+  <h2>International Paranormal Community</h2>
+  <p>
+    Paranormal stories know no borders. People from any country are welcome to support
+    this independent paranormal archive through voluntary contributions.
+  </p>
+</div>
+
+  </section>  <footer>
+    © 2026 – Proyecto independiente | Donaciones voluntarias
+  </footer></body>
+</html>
